重构项目结构和 Docker 配置
- 移动 Maven 配置文件从 docker/maven 到 backend/maven
- 移动 backend Dockerfile 到 backend/ 目录下
- 移动 frontend Dockerfile 到 frontend/shop-admin-ui/ 目录下
- 更新 docker-compose.infra.yml 中的 volumes 路径，移除 ./volumes 前缀
- 更新所有 Dockerfile 中的构建路径引用
- 优化项目结构，使各模块职责更清晰